--- a/teleportapp.flatpakref.in
+++ b/teleportapp.flatpakref.in
@@ -5,5 +5,5 @@ Branch=master
 Url=@URL@
 IsRuntime=False
 GPGKey=@GPG@
-RuntimeRepo=https://sdk.gnome.org/gnome.flatpakrepo
+RuntimeRepo=https://sdk.gnome.org/gnome-nightly.flatpakrepo
 Comment=org.gtk.teleportapp
