--- a/teleport.flatpakref.in
+++ b/teleport.flatpakref.in
@@ -5,5 +5,5 @@ Branch=master
 Url=@URL@
 IsRuntime=False
 GPGKey=@GPG@
-RuntimeRepo=https://sdk.gnome.org/gnome-nightly.flatpakrepo
+RuntimeRepo=https://sdk.gnome.org/gnome.flatpakrepo
 Comment=com.frac_tion.teleport
